--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -10,40 +10,33 @@
   &__card {
     background-color: #eee;
     width: 500px;
+    height: 200px;
     padding: 30px;
     border-radius: 10px;
     backdrop-filter: blur(3px);
-    span {
-      font-size: 30px;
-      margin: 0 auto;
-      display: flex;
-      justify-content: center;
-    }
-    h3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    h1 {
       color: #1d252c;
       font-size: 40px;
+      width: 60px;
       font-weight: 500;
       line-height: 57.6px;
       text-align: center;
     }
-    p {
-      font-family: Helvetica;
-      font-size: 16px;
-      font-weight: 400;
-      line-height: 25.6px;
-      text-align: center;
-      padding: 10px 0px;
-    }
 
     button {
-      padding: 10px 40px;
+      max-height: 50px;
+      padding: 20px;
+      width: 100px;
       background-color: #56b280;
       color: white;
-      margin-top: 20px;
       border: 1px solid transparent;
       border-radius: 6px;
-      display: block;
-      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
 
