--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -8,28 +8,38 @@
   place-items: center;
 
   &__card {
-    background-color: #eee;
-    width: 500px;
-    height: 200px;
+    background-color: #eeeeeeb0;
     padding: 30px;
+    width: 500px;
     border-radius: 10px;
-    backdrop-filter: blur(3px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    h1 {
+    backdrop-filter: blur(10px);
+    h3 {
       color: #1d252c;
-      font-size: 40px;
-      width: 60px;
-      font-weight: 500;
-      line-height: 57.6px;
+      font-family: Poppins;
+      font-size: 30px;
+      font-weight: 600;
       text-align: center;
     }
 
+    span {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 20px;
+    }
+
+    p {
+      font-family: Helvetica;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 25.6px;
+      text-align: center;
+      color: #1d252c;
+      padding: 10px 0px;
+    }
+
     button {
-      max-height: 50px;
-      padding: 20px;
-      width: 100px;
+      padding: 10px 40px;
       background-color: #56b280;
       color: white;
       border: 1px solid transparent;
@@ -37,6 +47,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      margin: 0 auto;
     }
   }
 
