--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -18,6 +18,24 @@
     }
   }
 
+  &__cart {
+    position: absolute;
+    background-color: green;
+    color: white;
+    border-radius: 50%;
+    font-size: 10px;
+    padding: 2px 6px;
+    top: -8px;
+    right: -10px;
+  }
+  &__heart {
+    background-color: green;
+    color: white;
+    border-radius: 50%;
+    font-size: 10px;
+    padding: 3px 6px;
+  }
+
   &__nav__list {
     display: flex;
     align-items: center;
@@ -25,6 +43,7 @@
   }
 
   &__nav__icon {
+    position: relative;
     display: flex;
     align-items: center;
     gap: 10px;
