--- a/src/components/cart-wrapper/cartWrapper.scss
+++ b/src/components/cart-wrapper/cartWrapper.scss
@@ -42,9 +42,11 @@
     }
 
     &__img {
+      background-color: #aaa6;
+      padding: 10px 20px;
       img {
-        width: 50px;
-        height: 50px;
+        width: 80px;
+        height: 80px;
       }
     }
   }
@@ -70,13 +72,13 @@
     align-items: flex-start;
     padding: 10px 0px;
     button {
-      padding: 6px 10px;
+      padding: 8px 10px;
       background-color: #aaa6;
       border: 1px solid transparent;
     }
     span {
       background-color: #aaa6;
-      padding: 6px 10px;
+      padding: 7px 10px;
       font-size: 15px;
     }
   }
@@ -84,58 +86,58 @@
     display: none;
   }
 
-  &__result {
-    display: flex;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: space-between;
-    padding: 30px 0px;
+  // &__result {
+  //   display: flex;
+  //   align-items: flex-start;
+  //   flex-wrap: wrap;
+  //   gap: 20px;
+  //   justify-content: space-between;
+  //   padding: 30px 0px;
 
-    form {
-      display: flex;
-      align-items: center;
-      border: 1px solid #aaa6;
+  //   form {
+  //     display: flex;
+  //     align-items: center;
+  //     border: 1px solid #aaa6;
 
-      input {
-        padding: 10px 20px;
-        border: none;
-        outline: none;
-        width: 100%;
-      }
+  //     input {
+  //       padding: 10px 20px;
+  //       border: none;
+  //       outline: none;
+  //       width: 100%;
+  //     }
 
-      button {
-        padding: 10px 20px;
-        background-color: blue;
-        border: 2px solid blue;
-        color: white;
-      }
-    }
-  }
+  //     button {
+  //       padding: 10px 20px;
+  //       background-color: blue;
+  //       border: 2px solid blue;
+  //       color: white;
+  //     }
+  //   }
+  // }
 
-  &__result__right-total {
-    padding-top: 20px;
-    border-top: 1px solid #aaa6;
-  }
+  // &__result__right-total {
+  //   padding-top: 20px;
+  //   border-top: 1px solid #aaa6;
+  // }
 
-  &__result__right {
-    width: 300px;
-    padding: 3px 0px;
-    button {
-      width: 100%;
-      padding: 12px;
-      background-color: blue;
-      color: white;
-      border: 1px solid transparent;
-    }
-  }
+  // &__result__right {
+  //   width: 300px;
+  //   padding: 3px 0px;
+  //   button {
+  //     width: 100%;
+  //     padding: 12px;
+  //     background-color: blue;
+  //     color: white;
+  //     border: 1px solid transparent;
+  //   }
+  // }
 
-  &__result__right-cart {
-    display: flex;
-    justify-content: space-between;
-    gap: 10px;
-    padding: 10px 0px;
-  }
+  // &__result__right-cart {
+  //   display: flex;
+  //   justify-content: space-between;
+  //   gap: 10px;
+  //   padding: 10px 0px;
+  // }
 
   @media (max-width: 900px) {
     &__bottom__row {
